# chi-studio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ChiCore/: ChiStudioApplication.cpp  ChiStudioApplication.h  main.cpp
ChiCore/Serialization/: FileSerializer.cpp  FileSerializer.h
ChiCore/UI/: IWidget.h  UILibrary.cpp  UILibrary.h  WEditMode.cpp  WEditMode.h  WHierarchy.cpp  WHierarchy.h  WImageCompositor.cpp  WImageCompositor.h  WObjectProperties.cpp  WObjectProperties.h  WRendering.cpp  WRendering.h  WTimeline.cpp  WTimeline.h
ChiGraphics/: AliasTypes.h  Application.cpp  Application.h  CMakeLists.txt  External.h  InputManager.cpp  InputManager.h  RNG.cpp  RNG.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Transform.cpp  Transform.h  Utilities.cpp  Utilities.h  XYZGridNode.cpp  XYZGridNode.h
ChiGraphics/Cameras/: ArcBallCameraNode.cpp  ArcBallCameraNode.h  TracingCameraNode.cpp  TracingCameraNode.h  WASDCameraNode.cpp  WASDCameraNode.h
ChiGraphics/Collision/: FHitRecord.h  FRay.h  TracingNode.cpp  TracingNode.h
ChiGraphics/Collision/Hittables/: CylinderHittable.cpp  CylinderHittable.h  HittableBase.h  MeshHittable.cpp  MeshHittable.h  Octree.cpp  Octree.h  SphereHittable.cpp  SphereHittable.h  TriangleHittable.cpp  TriangleHittable.h
ChiGraphics/Components/: CameraComponent.cpp  CameraComponent.h  ComponentBase.h  ComponentType.h  LightComponent.h  MaterialComponent.h  RenderingComponent.cpp  RenderingComponent.h  ShadingComponent.cpp  ShadingComponent.h  TracingComponent.cpp  TracingComponent.h
ChiGraphics/GL_Wrapper/: BindGuard.cpp  BindGuard.h  BindableBuffer.cpp  BindableBuffer.h  FTexture.cpp  FTexture.h  FrameBuffer.cpp  FrameBuffer.h  IBindable.h  RenderBuffer.cpp  RenderBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
ChiGraphics/Keyframing/: Keyframe.cpp  Keyframe.h  KeyframeManager.cpp  KeyframeManager.h  KeyframeTrack.cpp  KeyframeTrack.h  Keyframeable.cpp  Keyframeable.h
ChiGraphics/Lights/: AmbientLight.h  AmbientLightNode.cpp  AmbientLightNode.h  DirectionalLight.h  DirectionalLightNode.cpp  DirectionalLightNode.h  HittableLight.cpp  HittableLight.h  LightBase.h  LightNode.cpp  LightNode.h  PointLight.h
ChiGraphics/Materials/: Material.h  MaterialManager.cpp  MaterialManager.h
ChiGraphics/Meshes/: MeshData.h  MeshLoader.cpp  MeshLoader.h  ObjParser.cpp  ObjParser.h  PrimitiveFactory.cpp  PrimitiveFactory.h  VertexObject.cpp  VertexObject.h
ChiGraphics/Meshes/Primitives/: FEdge.cpp  FEdge.h  FFace.cpp  FFace.h  FHalfEdge.cpp  FHalfEdge.h  FVertex.cpp  FVertex.h
ChiGraphics/Modifiers/: MirrorModifier.cpp  MirrorModifier.h  Modifier.h  ScrewModifier.cpp  ScrewModifier.h  SubdivisionSurfaceModifier.cpp  SubdivisionSurfaceModifier.h  TransformModifier.cpp  TransformModifier.h
ChiGraphics/RayTracing/: FTracingCamera.h  RayTracer.cpp  RayTracer.h
ChiGraphics/Shaders/: EdgeShader.cpp  EdgeShader.h  OutlineShader.cpp  OutlineShader.h  PhongShader.cpp  PhongShader.h  PlainTextureShader.cpp  PlainTextureShader.h  PointShader.cpp  PointShader.h  SelectedFaceShader.cpp  SelectedFaceShader.h  ShaderProgram.cpp  ShaderProgram.h  SimpleShader.cpp  SimpleShader.h  TextureBlendShader.cpp  TextureBlendShader.h  TextureBlurShader.cpp  TextureBlurShader.h
ChiGraphics/Shaders/glsl/: edge.vert  outline.frag  outline.vert  phong.frag  plain_texture.frag  plain_texture.vert  point.frag  point.vert  selectableFace.frag  selectableFace.vert  texture_blend.frag  texture_blur.frag
ChiGraphics/Textures/: FImage.cpp  FImage.h  ImageBloomModifier.cpp  ImageBloomModifier.h  ImageBlurModifier.cpp  ImageBlurModifier.h  ImageManager.cpp  ImageManager.h  ImageModifier.h  ImageThresholdModifier.cpp  ImageThresholdModifier.h  ImageTonemappingModifier.cpp  ImageTonemappingModifier.h
assets/hdr/: imgui.ini
assets/models/: cube2materials.mtl  imgui.ini
assets/savefiles/: emptytest.chistudio  imgui.ini  matlibrarytest.chistudio  mattoobject.chistudio  newsave.chistudio  newtest.chistudio  nothingreally.chistudio  objecttest2.chistudio  test.chistudio  test4.chistudio  test5.chistudio  test6.chistudio  test7.chistudio  test8.chistudio  test9.chistudio
assets/savefiles/TestNewFolder/: imgui.ini  test.chistudio
